# unikraft-rs-smp-runtime-poc

./: .gitignore  Cargo.toml  Dockerfile  Kraftfile  Makefile  README.md  benchmark.py  runlog.txt  tls_linker.ld
.cargo/: config.toml
base_kernel/: kernel
guides/: ARCHITECTURE_VISUAL_GUIDE.md  PHASE1_COMPLETE.md  README.md  SOLUTION_LINK_ALL_SECTIONS.md  STRUCTURE.md  TRAMPOLINE_COPY_ISSUES.md  WHY_NOT_GLOBAL_ASM.md  dandelion_elf_integration.md  dandelion_port_integration.md
guides/smp/: 01_SMP_BOOT_OVERVIEW.md  02_BOOT_TRAMPOLINE_DETAILS.md  03_IMPLEMENTATION_CHECKLIST.md  04_DEBUGGING_STRATEGY.md
src/: ap_print.rs  cpu_startup.rs  debug_utils.rs  main.rs  timing.rs  trampolines.rs  user_code.rs  user_handlers.rs  user_pagetable.rs
src/ap/: ap.rs  ap_print.rs  mod.rs
src/boot/: boot_defs.h  boot_trampoline.S  boot_trampoline.ld  boot_trampoline_bindings.rs
src/dandelion_commons/: records.rs
src/dandelion_port/: ap_startup.rs  boot_trampoline.rs  handlers.rs  mod.rs  trampolines.rs  x86_64.rs
src/elfloader/: elf_parser.rs  mod.rs
