[package]
name = "smp-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86 = "0.52"

[features]
default = ["debug-all"]
debug-all = ["debug-ap-boot", "debug-user-mem", "debug-trampoline"]
debug-ap-boot = []     # Debug AP startup and initialization
debug-user-mem = []    # Debug user page tables and memory layout
debug-trampoline = []  # Debug low-level assembly trampolines

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1